# LicenseMatrix

./: pyproject.toml  setup.cfg
DOCS/: relations.dot
licensematrix/: license_matrix.py  license_type.py
licensematrix/dev/: update_matrix.py
