[build-system]
requires = ["setuptools>=44", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools_scm]

# Pylint
[tool.pylint.basic]
argument-naming-style ="camelCase"
attr-naming-style ="camelCase"
function-naming-style ="camelCase"
method-naming-style ="camelCase"
variable-naming-style ="camelCase"

[tool.pylint.format]
indent-string ="\t"

[tool.pylint.master]
ignore-patterns ="test_.*?py"

[tool.pylint.messages_control]
enable = [
	'F',  # Fatal
	'E',  # Error
	'W',  # Warning
	'R',  # Refactor
	'C',  # Convention
]
disable=[
	"pointless-string-statement",
	"superfluous-parens",
	"bad-continuation",
	"wrong-import-position",
	"unsubscriptable-object",
	"no-absolute-import",
]
