[metadata]
name = licensematrix
version = 2021
summary = List of popular open source licenses with naive functions to determine compatibility and search for a license from a string
author = FredHappyface
classifiers =
	Environment :: Console
	Environment :: MacOS X
	Environment :: Win32 (MS Windows)
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Intended Audience :: Education
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Security
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Utilities"

homepage = https://github.com/FHPythonUtils/LicenseMatrix
long_description = file: README.md

[options]
python_requires = >=3.7
packages = find:
zip_safe = True
include_package_data = True
